<resources>
    <string name="app_name">JianDao</string>
    <string name="text_auth_social_login">社交账号登录</string>
    <string name="text_auth_86">+86</string>
    <string name="text_auth_verification_code">输入验证码</string>
    <string name="text_auth_get_verification_code">获取验证码</string>
    <string name="text_auth_next_step">下一步</string>
    <string name="text_auth_code_login">验证码登录</string>
    <string name="text_auth_tv_psd_login">密码登录</string>
    <string name="text_auth_password_login">密码登录</string>
    <string name="text_auth_register_now">立即注册</string>
    <string name="text_auth_set_password">设置密码</string>
    <string name="text_auth_confirm_password">确认密码</string>
    <string name="text_auth_input_phone_num">请输入手机号</string>
    <string name="text_auth_input_password">请输入密码</string>
    <string name="text_auth_register">注册</string>
    <string name="text_auth_login">登录</string>
    <string name="error_invalid_phone_num">无效手机号</string>
    <string name="error_invalid_sms_code_num">验证码错误</string>
    <string name="error_invalid_null_password">请输入密码</string>
    <string name="text_auth_register_set_user_agreement">注册即是同意见道的用户协议和隐私声明</string>
    <string name="text_auth_forget_password">忘记密码?</string>
    <string name="text_error_refresh_fail">刷新失败</string>
    <string name="text_error_load_more_fail">加载更多失败</string>
    <string name="text_error_un_loign">需要登录</string>
    <string name="text_ad">广告</string>
    <string name="text_replay">重复</string>
    <string name="text_video">视频</string>
    <string name="text_topic">专题</string>
    <string name="text_detail_share">分享</string>
    <string name="text_detail_you_may_be_want_to_look">您可能还想看</string>
    <string name="text_write_comment">写评论</string>
    <string name="text_cancel">取消</string>
    <string name="text_comment_send">发送</string>
    <string name="text_detail_show_more_reply">查看更多回复</string>
    <string name="text_detail_write_comment">写评论</string>
    <string name="text_detail_relay_someone">回复：%1$s</string>
    <string name="text_detail_comment_error">评论失败</string>
    <string name="text_detail_comment">评论成功</string>
    <string name="text_detail_do_lick_toast">已赞过</string>
    <string name="text_need_login">需要登录</string>
    <string name="text_camera">相机</string>
    <string name="text_select_from_gallery">从相册选择</string>
    <string name="text_jump">跳过</string>
    <string name="text_try_it_now">立即体验</string>
    <string name="text_service_agreement_content">尊敬的用户您好，请您在使用本软件之前，认真阅读、并充分理解“见道”软件许可及服务协议（以下简称“本协议”）及各条款内容，尤其需关注免除或者限制责任的条款，并确认是否接受。您可阅读   《服务协议》和《隐私政策》了解详细信息，如同意，请点击“同意”继续阅读，享受我们的服务</string>
    <string name="text_service_agreement_title">服务协议和隐私政策</string>
    <string name="text_service_agreement">《服务协议》</string>
    <string name="text_service_privacy_policy">《隐私政策》</string>
    <string name="text_stop_to_use">暂不使用</string>
    <string name="text_agree">同意</string>
    <string name="text_user_protocol">用户协议</string>
</resources>
