<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical" android:layout_width="match_parent"
    android:background="#FFF4F4F4"
    android:layout_height="wrap_content">
    
    
    <Button
        android:id="@+id/mine_pop_btn_camera"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:textSize="18sp"
        android:textColor="#FF000000 "
        android:background="@drawable/ic_button_selector_style2"
        android:text="@string/text_camera"
        />

    <Button
        android:id="@+id/mine_pop_btn_gallery"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:layout_marginEnd="15dp"
        android:layout_marginStart="15dp"
        android:layout_marginTop="15dp"
        android:textSize="18sp"
        android:textColor="#FF000000 "
        android:background="@drawable/ic_button_selector_style2"
        android:text="@string/text_select_from_gallery"
        />



    <TextView
        android:id="@+id/mine_pop_tv_cancel"
        android:layout_width="match_parent"
        android:layout_height="49dp"
        android:background="@color/white"
        android:text="@string/text_cancel"
        android:textColor="#FF282B2E "
        android:textSize="18sp"
        android:gravity="center"
        android:layout_marginTop="10dp"
        />

</LinearLayout>