<?xml version="1.0" encoding="utf-8"?>
<com.mr.k.libmvp.widget.MatchScrollParentCLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="horizontal">


    <include layout="@layout/layout_auth_common" />


    <ImageView
        android:id="@+id/line1"
        style="@style/JianDao.LineHorizontal"
        android:layout_marginTop="218dp"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginBottom="6dp"
        android:text="@string/text_auth_86"
        android:textColor="@color/black"
        android:textSize="15dp"
        app:layout_constraintBottom_toTopOf="@+id/line1"
        app:layout_constraintStart_toStartOf="@+id/line1" />

    <ImageView
        android:id="@+id/imageView4"
        android:layout_width="0.5dp"
        android:layout_height="16dp"
        android:layout_marginStart="6dp"
        android:background="@color/black_282B2E"
        app:layout_constraintBottom_toBottomOf="@+id/textView2"
        app:layout_constraintStart_toEndOf="@+id/textView2"
        app:layout_constraintTop_toTopOf="@+id/textView2"
        app:srcCompat="@drawable/ic_auth_close" />

    <EditText
        android:id="@+id/auth_register_edt_phone_num"
        style="@style/JianDao.AutoEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="6dp"
        android:layout_marginEnd="10dp"
        android:ems="10"
        android:inputType="phone"
        android:maxLength="11"
        app:layout_constraintBottom_toBottomOf="@+id/imageView4"
        app:layout_constraintEnd_toStartOf="@+id/auth_register_iv_clean"
        app:layout_constraintStart_toEndOf="@+id/imageView4"
        app:layout_constraintTop_toTopOf="@+id/imageView4"
        tools:hint="123456789" />

    <com.mr.k.libmvp.widget.EditCleanButton
        android:id="@+id/auth_register_iv_clean"
        android:layout_width="25dp"
        android:layout_height="25dp"
        android:layout_marginEnd="40dp"
        android:background="@drawable/ic_edit_clean"
        app:layout_constraintBottom_toTopOf="@+id/line1"
        app:layout_constraintEnd_toEndOf="parent" />


    <ImageView
        android:id="@+id/line2"
        style="@style/JianDao.LineHorizontal"
        android:layout_marginTop="55dp"
        app:layout_constraintTop_toBottomOf="@+id/line1"
        tools:layout_editor_absoluteX="42dp" />

    <EditText
        android:id="@+id/auth_register_edt_verification_code"
        style="@style/JianDao.AutoEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="4dp"
        android:hint="@string/text_auth_verification_code"
        android:inputType="textPersonName"
        android:maxLength="6"
        app:layout_constraintBottom_toTopOf="@+id/line2"
        app:layout_constraintEnd_toStartOf="@+id/auth_register_tv_get_verification_code"
        app:layout_constraintStart_toStartOf="@+id/line2" />

    <com.mr.k.libmvp.widget.CountDownView
        android:id="@+id/auth_register_tv_get_verification_code"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/text_auth_get_verification_code"
        android:textColor="@color/gray_9B9C9E"
        app:countDownTextColor="@color/black_282B2E"
        app:countDownCount="10"
        android:textSize="13dp"
        app:countDownInterval="1"
        app:layout_constraintBottom_toBottomOf="@+id/auth_register_edt_verification_code"
        app:layout_constraintEnd_toEndOf="@+id/line2"
        app:layout_constraintTop_toTopOf="@+id/auth_register_edt_verification_code" />

    <Button
        android:id="@+id/auth_register_btn_next_step"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="49dp"
        android:background="@drawable/ic_button_selector"
        android:enabled="false"
        android:text="@string/text_auth_next_step"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="@+id/line2"
        app:layout_constraintStart_toStartOf="@+id/line2"
        app:layout_constraintTop_toBottomOf="@+id/line2" />

    <TextView
        android:id="@+id/auth_register_tv_code_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="14dp"
        android:text="@string/text_auth_code_login"
        android:textColor="@color/gray_9B9C9E"
        android:textSize="12dp"
        app:layout_constraintStart_toStartOf="@+id/auth_register_btn_next_step"
        app:layout_constraintTop_toBottomOf="@+id/auth_register_btn_next_step" />

    <TextView
        android:id="@+id/auth_register_tv_psd_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="3dp"
        android:text="@string/text_auth_tv_psd_login"
        android:textColor="@color/gray_9B9C9E"
        android:textSize="12dp"
        app:layout_constraintEnd_toEndOf="@+id/auth_register_btn_next_step"
        app:layout_constraintTop_toTopOf="@+id/auth_register_tv_code_login" />

    <ImageView
        android:id="@+id/auth_iv_anchor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/auth_register_tv_code_login"
        app:layout_constraintStart_toEndOf="@+id/auth_register_tv_code_login"
      />


</com.mr.k.libmvp.widget.MatchScrollParentCLayout>
