<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">


    <com.mr.k.libmvp.widget.MatchScrollParentCLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <include layout="@layout/layout_auth_common" />

        <ImageView
            android:id="@+id/line1"
            style="@style/JianDao.LineHorizontal"
            android:layout_marginTop="218dp"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_auth_close" />


        <EditText
            android:id="@+id/auth_password_login_edt_phone_num"
            style="@style/JianDao.AutoEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="16dp"
            android:layout_marginBottom="4dp"
            android:ems="10"
            android:hint="@string/text_auth_input_phone_num"
            android:inputType="phone"
            android:maxLength="11"
            android:textColor="@color/black_333333"
            android:textColorHint="@color/gray_CCCCCC"
            android:textSize="15dp"
            app:layout_constraintBottom_toTopOf="@+id/line1"
            app:layout_constraintEnd_toStartOf="@+id/auth_password_login_iv_clean_phone_num"
            app:layout_constraintStart_toStartOf="@+id/line1" />


        <com.mr.k.libmvp.widget.EditCleanButton
            android:id="@+id/auth_password_login_iv_clean_phone_num"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toTopOf="@+id/line1"
            app:layout_constraintEnd_toEndOf="@+id/line1"
            app:srcCompat="@drawable/ic_edit_clean" />


        <ImageView
            android:id="@+id/line2"
            style="@style/JianDao.LineHorizontal"
            android:layout_marginTop="55dp"
            app:layout_constraintTop_toBottomOf="@id/line1"
            app:srcCompat="@drawable/ic_auth_close" />

        <com.mr.k.libmvp.widget.PasswordEditText
            android:id="@+id/auth_password_login_edt_password"
            style="@style/JianDao.AutoEditText"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginEnd="4dp"
            android:layout_marginBottom="4dp"
            android:ems="10"
            android:hint="@string/text_auth_input_password"
            android:inputType="textPassword"
            android:textColor="@color/black_333333"
            android:textColorHint="@color/gray_CCCCCC"
            android:textSize="15dp"
            app:layout_constraintBottom_toTopOf="@+id/line2"
            app:layout_constraintEnd_toStartOf="@+id/auth_password_login_iv_toggle"
            app:layout_constraintStart_toStartOf="@+id/line2" />

        <com.mr.k.libmvp.widget.EditCleanButton
            android:id="@+id/auth_password_login_iv_clean_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="8dp"
            app:layout_constraintBottom_toTopOf="@+id/line2"
            app:layout_constraintEnd_toStartOf="@+id/auth_password_login_tv_forget_password"
            app:srcCompat="@drawable/ic_edit_clean" />

        <com.mr.k.libmvp.widget.EditTogglePasswordButton
            android:id="@+id/auth_password_login_iv_toggle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="7dp"
            app:layout_constraintBottom_toBottomOf="@+id/auth_password_login_iv_clean_password"
            app:layout_constraintEnd_toStartOf="@+id/auth_password_login_iv_clean_password"
            app:layout_constraintTop_toTopOf="@+id/auth_password_login_iv_clean_password"
            app:srcCompat="@drawable/ic_mvp_eyes_close" />

        <TextView
            android:id="@+id/auth_password_login_tv_forget_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/text_auth_forget_password"
            android:textColor="@color/gray_9B9C9E"
            android:textSize="13dp"
            app:layout_constraintBottom_toBottomOf="@+id/auth_password_login_edt_password"
            app:layout_constraintEnd_toEndOf="@+id/line2" />

        <Button
            android:id="@+id/auth_password_login_btn_login"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="49dp"
            android:background="@drawable/ic_button_selector"
            android:enabled="false"
            android:text="@string/text_auth_login"
            android:textColor="@color/white"
            android:textSize="18dp"
            app:layout_constraintEnd_toEndOf="@+id/line2"
            app:layout_constraintStart_toStartOf="@+id/line2"
            app:layout_constraintTop_toBottomOf="@+id/line2" />


        <TextView
            android:id="@+id/auth_password_login_tv_code_login"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:layout_marginTop="14dp"
            android:text="@string/text_auth_code_login"
            android:textColor="@color/gray_9B9C9E"
            android:textSize="12dp"
            app:layout_constraintStart_toStartOf="@+id/auth_password_login_btn_login"
            app:layout_constraintTop_toBottomOf="@+id/auth_password_login_btn_login" />

        <TextView
            android:id="@+id/auth_password_login_tv_register_now"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginEnd="3dp"
            android:text="@string/text_auth_register_now"
            android:textColor="@color/gray_9B9C9E"
            android:textSize="12dp"
            app:layout_constraintEnd_toEndOf="@+id/auth_password_login_btn_login"
            app:layout_constraintTop_toTopOf="@+id/auth_password_login_tv_code_login" />

        <ImageView
            android:id="@+id/auth_iv_anchor"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="@+id/auth_password_login_tv_code_login"
            app:layout_constraintStart_toEndOf="@+id/auth_password_login_tv_code_login" />


    </com.mr.k.libmvp.widget.MatchScrollParentCLayout>

</ScrollView>