<?xml version="1.0" encoding="utf-8"?>
<com.mr.k.libmvp.widget.MatchScrollParentCLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">


    <include layout="@layout/layout_auth_common"/>

    <ImageView
        android:id="@+id/line1"
        style="@style/JianDao.LineHorizontal"
        android:layout_marginTop="218dp"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_auth_close" />

    <EditText
        android:id="@+id/auth_register_set_edt_password"
        style="@style/JianDao.AutoEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="16dp"
        android:hint="@string/text_auth_set_password"
        android:layout_marginBottom="4dp"
        android:ems="10"
        android:textSize="15dp"
        android:textColorHint="@color/gray_CCCCCC"
        android:textColor="@color/black_333333"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/line1"
        app:layout_constraintEnd_toStartOf="@+id/auth_register_set_iv_toggle_psd"
        app:layout_constraintStart_toStartOf="@+id/line1" />

    <com.mr.k.libmvp.widget.EditCleanButton
        android:id="@+id/auth_register_set_iv_clean_psd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/line1"
        app:layout_constraintEnd_toEndOf="@+id/line1"
        app:srcCompat="@drawable/ic_edit_clean" />

    <com.mr.k.libmvp.widget.EditTogglePasswordButton
        android:id="@+id/auth_register_set_iv_toggle_psd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="7dp"
        app:layout_constraintBottom_toBottomOf="@+id/auth_register_set_iv_clean_psd"
        app:layout_constraintEnd_toStartOf="@+id/auth_register_set_iv_clean_psd"
        app:layout_constraintTop_toTopOf="@+id/auth_register_set_iv_clean_psd"
        app:srcCompat="@drawable/ic_mvp_eyes_close" />



    <ImageView
        android:id="@+id/line2"
        style="@style/JianDao.LineHorizontal"
        android:layout_marginTop="55dp"
        app:layout_constraintTop_toBottomOf="@id/line1"
        app:srcCompat="@drawable/ic_auth_close" />

    <EditText
        android:id="@+id/auth_register_set_edt_confirm_password"
        style="@style/JianDao.AutoEditText"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="4dp"
        android:ems="10"
        android:hint="@string/text_auth_confirm_password"
        android:inputType="textPassword"
        android:textColor="@color/black_333333"
        android:textColorHint="@color/gray_CCCCCC"
        android:textSize="15dp"
        app:layout_constraintBottom_toTopOf="@+id/line2"
        app:layout_constraintEnd_toStartOf="@+id/auth_register_set_iv_toggle_confirm_psd"
        app:layout_constraintStart_toStartOf="@+id/line2" />


    <com.mr.k.libmvp.widget.EditCleanButton
        android:id="@+id/auth_register_set_iv_clean_confirm_psd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@+id/line2"
        app:layout_constraintEnd_toEndOf="@+id/line2"
        app:srcCompat="@drawable/ic_edit_clean" />
    <com.mr.k.libmvp.widget.EditTogglePasswordButton
        android:id="@+id/auth_register_set_iv_toggle_confirm_psd"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="7dp"
        app:layout_constraintBottom_toBottomOf="@+id/auth_register_set_iv_clean_confirm_psd"
        app:layout_constraintEnd_toStartOf="@+id/auth_register_set_iv_clean_confirm_psd"
        app:layout_constraintTop_toTopOf="@+id/auth_register_set_iv_clean_confirm_psd"
        app:srcCompat="@drawable/ic_mvp_eyes_close" />

    <TextView
        android:id="@+id/auth_register_set_tv_user_agreement"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="4dp"
        android:layout_marginTop="15dp"
        android:text="TextView"
        android:textColor="@color/gray_999999"
        android:textSize="12dp"
        app:layout_constraintStart_toStartOf="@+id/line2"
        app:layout_constraintTop_toBottomOf="@+id/line2" />


    <Button
        android:id="@+id/auth_register_set_btn_register"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="22dp"
        android:background="@drawable/ic_button_selector"
        android:enabled="false"
        android:text="@string/text_auth_register"
        android:textColor="@color/white"
        android:textSize="18dp"
        app:layout_constraintEnd_toEndOf="@+id/line2"
        app:layout_constraintStart_toStartOf="@+id/line2"
        app:layout_constraintTop_toBottomOf="@+id/auth_register_set_tv_user_agreement" />


    <TextView
        android:id="@+id/auth_register_set_tv_verification_code_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="3dp"
        android:layout_marginTop="14dp"
        android:text="@string/text_auth_code_login"
        app:layout_constraintStart_toStartOf="@+id/auth_register_set_btn_register"
        app:layout_constraintTop_toBottomOf="@+id/auth_register_set_btn_register" />

    <TextView
        android:id="@+id/auth_register_set_tv_password_login"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginEnd="3dp"
        android:text="@string/text_auth_password_login"
        app:layout_constraintEnd_toEndOf="@+id/auth_register_set_btn_register"
        app:layout_constraintTop_toTopOf="@+id/auth_register_set_tv_verification_code_login" />


    <ImageView
        android:id="@+id/auth_iv_anchor"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="@+id/auth_register_set_tv_verification_code_login"
        app:layout_constraintStart_toEndOf="@+id/auth_register_set_tv_verification_code_login"
        />

</com.mr.k.libmvp.widget.MatchScrollParentCLayout>